--- a/vahan/src/css/Navbar.css
+++ b/vahan/src/css/Navbar.css
@@ -1,6 +1,6 @@
 .navbar {
-    background-color: rgba(114, 46, 209, 0.8); /* Purple background with opacity */
-    backdrop-filter: blur(10px); /* Apply blur effect */
+    background-color: rgba(114, 46, 209, 0.8); 
+    backdrop-filter: blur(10px);
     padding: 1rem;
     display: flex;
     justify-content: center;
@@ -13,5 +13,11 @@
     color: white;
     margin: 0;
     font-size: 1.5rem;
+  }
+
+  .back{
+    position:absolute;
+    left:30px;
+    color:white;
   }
   
