added toast and bugs fixed

--- a/vahan/src/App.css
+++ b/vahan/src/App.css
@@ -1,5 +1,10 @@
 *{
   text-decoration: none;
+  scroll-behavior: smooth;
+  box-sizing:border-box;
+}
+h2{
+  color:Black;
 }
 body::-webkit-scrollbar {
   display: none;  /* Safari and Chrome */
