--- a/vahan/src/css/Home.css
+++ b/vahan/src/css/Home.css
@@ -1,7 +1,11 @@
 
 .container {
-    padding: 0px 50px;
-   
+    padding: 10px 50px;
+    margin:10px 30px;
+    border: 2px solid transparent;
+    background-color: aliceblue;
+    border-radius: 10px;
+    backdrop-filter: blur(10px);    
 }
 .container:last-child{
     margin-bottom: 30px;
@@ -22,7 +26,7 @@
     display: block;
     width: 100%;
     padding: 10px;
-    margin: 10px;
+    /* margin: 10px; */
     background-color: #4CAF50;
     color: white;
     border: none;
@@ -36,7 +40,7 @@
     align-items: center;
     padding: 7px;
     background-color: #4CAF50;
-    /* margin-top: 5px; */
+    margin-top: 5px;
     color: white;
     border: none;
     border-radius: 5px;
