--- a/vahan/src/css/Navbar.css
+++ b/vahan/src/css/Navbar.css
@@ -1,5 +1,6 @@
 .navbar {
     background-color: rgba(114, 46, 209, 0.8); 
+    z-index: 1000;
     backdrop-filter: blur(10px);
     padding: 1rem;
     display: flex;
