--- a/vahan/src/css/Form.css
+++ b/vahan/src/css/Form.css
@@ -1,5 +1,5 @@
 .form-container {
-    max-width: 600px;
+    max-width: 90vw;
     margin: 10px auto;
     padding: 20px;
     background-color: #f9f9f9;
