--- a/vahan/src/css/ReadData.css
+++ b/vahan/src/css/ReadData.css
@@ -1,10 +1,21 @@
 .alterButton{
+  /* display: flex;
+  justify-content: center;
+  align-items: center; */
+  /* font-size: 150px; */
+  }
+  /* .dataRow{
+    background-color: antiquewhite;
+  } */
+.buttons button{
   display: flex;
   justify-content: center;
   align-items: center;
-  font-size: 15px;
-  }
-  .dataRow{
-    /* width:600px; */
-    background-color: antiquewhite;
+  width:30px;
+  height: 30px;  
+  /* font-size: 25px; */
+}
+
+  h1{
+    text-align: center;
   }
